chore(store): add jvm options when running tests